--- a/css/main.css
+++ b/css/main.css
@@ -3,31 +3,61 @@ body{
   background-color: #E8E8E8;
 }
 #vision-board {
-  margin: 50px auto;
+/*   margin: 50px auto;
   width: 1200px;
-	height: 850px;
-	overflow: auto;
-	background: url('../img/background.png');
-	background-size: cover;
-	font-family: 'Montserrat', sans-serif;
+  height: 850px; */
+  overflow: auto;
+  background: url('../img/background.png');
+  background-size: cover;
+  font-family: 'Montserrat', sans-serif;
   font-size:20px;
   font-weight: 700;
-	text-transform: uppercase;
+  text-transform: uppercase;
+   display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
-.block {
-  float: left;
-  width: 400px;
-  box-sizing:border-box;
+
+@media only screen and (min-width: 1200px) {
+	#vision-board {
+	  margin: 50px auto;
+	  width: 1200px;
+	  height: 850px;
+	  overflow: auto;
+	  background: url('../img/background.png');
+	  background-size: cover;
+	  font-family: 'Montserrat', sans-serif;
+	  font-size:20px;
+	  font-weight: 700;
+	  text-transform: uppercase;
+	}
+}
+#vision-board > div {
+    width: 100%;
+    text-align: center;
+    padding: 40px 20px;
+}
+
+@media only screen and (min-width: 1200px) {
+	.block {
+	  float: left;
+	  width: 400px;
+	  box-sizing:border-box;
+	}
 }
 /****MAIN STYLE****/
-.small-block {
-	padding: 20px 40px;
-	height: 210px;
+@media only screen and (min-width: 1200px) {
+	.small-block {
+		padding: 20px 40px;
+		height: 210px;
+	}
+	 .large-block {
+		padding: 70px 40px;
+		height: 430px;
+	}
 }
- .large-block {
-	padding: 70px 40px;
-	height: 430px;
-}
+
  .center {
 	text-align: center;
 }
