--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body{
     flex-direction: column;
     align-content: center;
     align-items: center;
+   display: inline-block;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -33,12 +34,13 @@ body{
 	  text-transform: uppercase;
 	}
 }
-#vision-board > div {
-    width: 100%;
-    text-align: center;
-    padding: 40px 20px;
+@media only screen and (max-width: 1199px) {
+	#vision-board > div {
+	    width: 100%;
+	    text-align: center;
+	    padding: 40px 20px;
+	}
 }
-
 @media only screen and (min-width: 1200px) {
 	.block {
 	  float: left;
