--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body{
 	  font-size:20px;
 	  font-weight: 700;
 	  text-transform: uppercase;
-	  display: inline-block;
+	  display: block;
 	}
 }
 @media only screen and (max-width: 1199px) {
